--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -27,7 +27,15 @@
    "execution_count": null,
    "id": "8939d892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Cuantas veces deseas ralizar la Simulacion?\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -53,9 +61,9 @@
     "    return EventosFavorables/Repeticiones\n",
     "        \n",
     "#Pregunto al Usuario Cuantas eces Desea Realiar la Siulacion\n",
-    "print(\"¿Cuantas veces deseas ralizar la Simulacion?\")\n",
+    "print(\"La Simulación se realizará 1000 Veces\")\n",
     "#Transformo el numero en Integer. No Valide si era un crcter.\n",
-    "Repeticiones=int(input())\n",
+    "Repeticiones=1000\n",
     "#Este Subalgoritmo Controla el Flujo y me devuelve la Probabilidad\n",
     "Simulacion =  Simulacion_de_Dados(Repeticiones)\n",
     "print(f\"El porcentaje de las simulaciones da: {Simulacion}\")"
