--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -32,7 +32,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¿Cuantas veces deseas ralizar la Simulacion?\n"
+      "La Simulación se realizará 1000 Veces\n",
+      "El porcentaje de las simulaciones da: 0.679\n"
      ]
     }
    ],
@@ -58,7 +59,7 @@
     "# y las Operaciones\n",
     "    for i in range(Repeticiones):\n",
     "        EventosFavorables = EventosFavorables + Lanze_de_Dados()\n",
-    "    return EventosFavorables/Repeticiones\n",
+    "    return (EventosFavorables/Repeticiones*100)\n",
     "        \n",
     "#Pregunto al Usuario Cuantas eces Desea Realiar la Siulacion\n",
     "print(\"La Simulación se realizará 1000 Veces\")\n",
@@ -66,7 +67,7 @@
     "Repeticiones=1000\n",
     "#Este Subalgoritmo Controla el Flujo y me devuelve la Probabilidad\n",
     "Simulacion =  Simulacion_de_Dados(Repeticiones)\n",
-    "print(f\"El porcentaje de las simulaciones da: {Simulacion}\")"
+    "print(f\"El porcentaje de las simulaciones da: {Simulacion}%\")"
    ]
   },
   {
