--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
      "output_type": "stream",
      "text": [
       "La Simulación se realizará 1000 Veces\n",
-      "El porcentaje de las simulaciones da: 0.679\n"
+      "El porcentaje de las simulaciones da: 65.0%\n"
      ]
     }
    ],
