--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
      "output_type": "stream",
      "text": [
       "La Simulación se realizará 1000 Veces\n",
-      "El porcentaje de las simulaciones da: 65.0%\n"
+      "El porcentaje de las simulaciones da: 64.8%\n"
      ]
     }
    ],
@@ -92,17 +92,28 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'lista' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\Program Files\\Python312\\python.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '\"c:/Program Files/Python312/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 42\u001b[39m\n\u001b[32m     38\u001b[39m         \u001b[38;5;28mprint\u001b[39m(Bolas)\n\u001b[32m     40\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m Bolas\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m prueba = \u001b[43mtake_balls\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 33\u001b[39m, in \u001b[36mtake_balls\u001b[39m\u001b[34m(n_simulations)\u001b[39m\n\u001b[32m     30\u001b[39m      Bolas.append(ball_box[np.random.randint(\u001b[32m0\u001b[39m, \u001b[32m59\u001b[39m)])\n\u001b[32m     31\u001b[39m conteo = {}\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlista\u001b[49m:\n\u001b[32m     34\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m conteo:\n\u001b[32m     35\u001b[39m         conteo[item] += \u001b[32m1\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'lista' is not defined"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "ball_box = {}\n",
     "\n",
     "# Crea la cajas con las bolas\n",
@@ -116,7 +127,34 @@
     "\n",
     "print(ball_box)\n",
     "            \n",
-    "# TODO"
+    "def take_balls(n_simulations = 1000):\n",
+    "    count_1 = 0\n",
+    "    count_2 = 0\n",
+    "\n",
+    "    #for i in range(n_simulations):\n",
+    "    Bolas = []\n",
+    "\n",
+    "# El Algoritmo que nos entregaron Llena la Caja con \n",
+    "# Las Blancas desde el indice 0 al 9 dando 10 Blancas\n",
+    "# Las Rojas desde el indice 10 al 29 dando 20 Rojas\n",
+    "# Las Verdes desde el indice 30 al 59 dando 30 Verdes\n",
+    "# Siendo las Verrdes las de mayor provabilidad\n",
+    "\n",
+    "    for i in range(5):\n",
+    "         Bolas.append(ball_box[np.random.randint(0, 59)])\n",
+    "    conteo = {}\n",
+    "\n",
+    "    for item in lista:\n",
+    "        if item in conteo:\n",
+    "            conteo[item] += 1\n",
+    "        else:\n",
+    "            conteo[item] = 1\n",
+    "\n",
+    "    print(Bolas)\n",
+    "    return Bolas\n",
+    "\n",
+    "prueba = take_balls()\n",
+    "\n"
    ]
   }
  ],
