--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -95,19 +95,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'lista' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 42\u001b[39m\n\u001b[32m     38\u001b[39m         \u001b[38;5;28mprint\u001b[39m(Bolas)\n\u001b[32m     40\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m Bolas\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m prueba = \u001b[43mtake_balls\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 33\u001b[39m, in \u001b[36mtake_balls\u001b[39m\u001b[34m(n_simulations)\u001b[39m\n\u001b[32m     30\u001b[39m      Bolas.append(ball_box[np.random.randint(\u001b[32m0\u001b[39m, \u001b[32m59\u001b[39m)])\n\u001b[32m     31\u001b[39m conteo = {}\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlista\u001b[49m:\n\u001b[32m     34\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m conteo:\n\u001b[32m     35\u001b[39m         conteo[item] += \u001b[32m1\u001b[39m\n",
-      "\u001b[31mNameError\u001b[39m: name 'lista' is not defined"
+      "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n",
+      "0\n",
+      "2\n",
+      "3\n",
+      "0\n",
+      "0\n",
+      "{'Green': 3, 'Red': 2}\n"
      ]
     }
    ],
@@ -144,17 +138,29 @@
     "         Bolas.append(ball_box[np.random.randint(0, 59)])\n",
     "    conteo = {}\n",
     "\n",
-    "    for item in lista:\n",
+    "# Convierto los Elementos a un Diccionario\n",
+    "    for item in Bolas:\n",
     "        if item in conteo:\n",
     "            conteo[item] += 1\n",
     "        else:\n",
     "            conteo[item] = 1\n",
     "\n",
-    "    print(Bolas)\n",
-    "    return Bolas\n",
+    "# Realizo las Comparaciones\n",
+    "    print(conteo.get('White',0))\n",
+    "    print(conteo.get('Red',0))\n",
+    "    print(conteo.get('Green',0))\n",
+    "    if (conteo.get('Green',0)==3) and (conteo.get('Red',0)==2):\n",
+    "        count_1 += 1\n",
+    "    if (conteo.get('White',0)==5) or (conteo.get('Red',0)==5) or (conteo.get('Green',0)==5):\n",
+    "        count_2 += 1\n",
+    "\n",
+    "    print(count_1)\n",
+    "    print(count_2)\n",
+    "\n",
+    "    return conteo\n",
     "\n",
     "prueba = take_balls()\n",
-    "\n"
+    "print(prueba)\n"
    ]
   }
  ],
