Ejercicio_02_Ciclo_Completo

--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -99,9 +99,9 @@
       "0\n",
       "2\n",
       "3\n",
+      "1\n",
       "0\n",
-      "0\n",
-      "{'Green': 3, 'Red': 2}\n"
+      "{'Red': 2, 'Green': 3}\n"
      ]
     }
    ],
@@ -122,37 +122,38 @@
     "print(ball_box)\n",
     "            \n",
     "def take_balls(n_simulations = 1000):\n",
-    "    count_1 = 0\n",
-    "    count_2 = 0\n",
+    "    Roja_y_Blanca = 0\n",
+    "    Iguales = 0\n",
     "\n",
-    "    #for i in range(n_simulations):\n",
-    "    Bolas = []\n",
+    "    \n",
+    "    for i in range(n_simulations):\n",
+    "        Bolas = []\n",
     "\n",
-    "# El Algoritmo que nos entregaron Llena la Caja con \n",
-    "# Las Blancas desde el indice 0 al 9 dando 10 Blancas\n",
-    "# Las Rojas desde el indice 10 al 29 dando 20 Rojas\n",
-    "# Las Verdes desde el indice 30 al 59 dando 30 Verdes\n",
-    "# Siendo las Verrdes las de mayor provabilidad\n",
+    "            # El Algoritmo que nos entregaron Llena la Caja con \n",
+    "            # Las Blancas desde el indice 0 al 9 dando 10 Blancas\n",
+    "            # Las Rojas desde el indice 10 al 29 dando 20 Rojas\n",
+    "            # Las Verdes desde el indice 30 al 59 dando 30 Verdes\n",
+    "            # Siendo las Verrdes las de mayor provabilidad\n",
     "\n",
-    "    for i in range(5):\n",
-    "         Bolas.append(ball_box[np.random.randint(0, 59)])\n",
-    "    conteo = {}\n",
+    "        for i in range(5):\n",
+    "            Bolas.append(ball_box[np.random.randint(0, 59)])\n",
+    "            conteo = {}\n",
     "\n",
-    "# Convierto los Elementos a un Diccionario\n",
-    "    for item in Bolas:\n",
-    "        if item in conteo:\n",
-    "            conteo[item] += 1\n",
-    "        else:\n",
-    "            conteo[item] = 1\n",
+    "            # Convierto los Elementos a un Diccionario\n",
+    "        for item in Bolas:\n",
+    "            if item in conteo:\n",
+    "                conteo[item] += 1\n",
+    "            else:\n",
+    "                conteo[item] = 1\n",
     "\n",
-    "# Realizo las Comparaciones\n",
-    "    print(conteo.get('White',0))\n",
-    "    print(conteo.get('Red',0))\n",
-    "    print(conteo.get('Green',0))\n",
-    "    if (conteo.get('Green',0)==3) and (conteo.get('Red',0)==2):\n",
-    "        count_1 += 1\n",
-    "    if (conteo.get('White',0)==5) or (conteo.get('Red',0)==5) or (conteo.get('Green',0)==5):\n",
-    "        count_2 += 1\n",
+    "            # Realizo las Comparaciones\n",
+    "            print(conteo.get('White',0))\n",
+    "            print(conteo.get('Red',0))\n",
+    "            print(conteo.get('Green',0))\n",
+    "            if (conteo.get('White',0)==3) and (conteo.get('Red',0)==2):\n",
+    "                Roja_y_Blanca += 1\n",
+    "            if (conteo.get('White',0)==5) or (conteo.get('Red',0)==5) or (conteo.get('Green',0)==5):\n",
+    "                Iguales += 1\n",
     "\n",
     "    print(count_1)\n",
     "    print(count_2)\n",
