--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -96,12 +96,9 @@
      "output_type": "stream",
      "text": [
       "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "1\n",
-      "0\n",
-      "{'Red': 2, 'Green': 3}\n"
+      "7\n",
+      "33\n",
+      "33\n"
      ]
     }
    ],
@@ -121,12 +118,12 @@
     "\n",
     "print(ball_box)\n",
     "            \n",
-    "def take_balls(n_simulations = 1000):\n",
-    "    Roja_y_Blanca = 0\n",
+    "def take_balls(Numero_Repeticiones):\n",
+    "    Rojas_y_Blancas = 0\n",
     "    Iguales = 0\n",
     "\n",
     "    \n",
-    "    for i in range(n_simulations):\n",
+    "    for i in range(Numero_Repeticiones):\n",
     "        Bolas = []\n",
     "\n",
     "            # El Algoritmo que nos entregaron Llena la Caja con \n",
@@ -147,21 +144,22 @@
     "                conteo[item] = 1\n",
     "\n",
     "            # Realizo las Comparaciones\n",
-    "            print(conteo.get('White',0))\n",
-    "            print(conteo.get('Red',0))\n",
-    "            print(conteo.get('Green',0))\n",
+    "\n",
     "            if (conteo.get('White',0)==3) and (conteo.get('Red',0)==2):\n",
-    "                Roja_y_Blanca += 1\n",
+    "                Rojas_y_Blancas += 1\n",
     "            if (conteo.get('White',0)==5) or (conteo.get('Red',0)==5) or (conteo.get('Green',0)==5):\n",
     "                Iguales += 1\n",
     "\n",
-    "    print(count_1)\n",
-    "    print(count_2)\n",
+    "    print(Rojas_y_Blancas)\n",
+    "    print(Iguales)\n",
     "\n",
-    "    return conteo\n",
+    "    return Rojas_y_Blancas,Iguales\n",
     "\n",
-    "prueba = take_balls()\n",
-    "print(prueba)\n"
+    "Numero_Repeticiones = 1000\n",
+    "prueba = take_balls(Numero_Repeticiones)\n",
+    "print(prueba[1])\n",
+    "print(f\"La probabilidad de que salgan 3 Blancas y 2 Rojas: {prueba[0]/ Numero_Repeticiones* 100}%\")\n",
+    "print(f\"La probabilidad de que todas las bolas sean Iguales: {prueba[1]/ Numero_Repeticiones* 100}%\")"
    ]
   }
  ],
