--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -96,9 +96,10 @@
      "output_type": "stream",
      "text": [
       "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n",
-      "7\n",
-      "33\n",
-      "33\n"
+      "6\n",
+      "44\n",
+      "La probabilidad de que salgan 3 Blancas y 2 Rojas: 0.6%\n",
+      "La probabilidad de que todas las bolas sean Iguales: 4.3999999999999995%\n"
      ]
     }
    ],
@@ -150,14 +151,11 @@
     "            if (conteo.get('White',0)==5) or (conteo.get('Red',0)==5) or (conteo.get('Green',0)==5):\n",
     "                Iguales += 1\n",
     "\n",
-    "    print(Rojas_y_Blancas)\n",
-    "    print(Iguales)\n",
     "\n",
     "    return Rojas_y_Blancas,Iguales\n",
     "\n",
     "Numero_Repeticiones = 1000\n",
     "prueba = take_balls(Numero_Repeticiones)\n",
-    "print(prueba[1])\n",
     "print(f\"La probabilidad de que salgan 3 Blancas y 2 Rojas: {prueba[0]/ Numero_Repeticiones* 100}%\")\n",
     "print(f\"La probabilidad de que todas las bolas sean Iguales: {prueba[1]/ Numero_Repeticiones* 100}%\")"
    ]
