--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -137,7 +137,7 @@
     "            Bolas.append(ball_box[np.random.randint(0, 59)])\n",
     "            conteo = {}\n",
     "\n",
-    "            # Convierto los Elementos a un Diccionario\n",
+    "            # Convierto los Elementos a un Diccionario y cuento\n",
     "        for item in Bolas:\n",
     "            if item in conteo:\n",
     "                conteo[item] += 1\n",
